# unsegen

./: CHANGELOG.md  Cargo.toml  README.md  README.me  run_rustfmt.sh
src/: lib.rs
src/base/: basic_types.rs  cursor.rs  grapheme_cluster.rs  mod.rs  ranges.rs  style.rs  terminal.rs  window.rs
src/container/: boxdrawing.rs  mod.rs
src/input/: mod.rs
src/widget/: layouts.rs  linestorage.rs  mod.rs  widget.rs
src/widget/builtin/: lineedit.rs  logviewer.rs  mod.rs  promptline.rs  table.rs  textedit.rs
src/widget/widgets/: lineedit.rs  linelabel.rs  logviewer.rs  mod.rs  pager.rs  promptline.rs  table.rs
unsegen-jsonviewer/: Cargo.toml
unsegen-jsonviewer/src/: displayvalue.rs  lib.rs  path.rs
unsegen-pager/: Cargo.toml
unsegen-pager/src/: decorating.rs  highlighting.rs  lib.rs
unsegen-signals/: Cargo.toml
unsegen-signals/src/: lib.rs
unsegen-terminal/: Cargo.toml
unsegen-terminal/src/: ansi.rs  index.rs  lib.rs  terminalwindow.rs
unsegen-terminal/src/pty/: ffi.rs  mod.rs
unsegen_jsonviewer/: Cargo.toml
unsegen_jsonviewer/src/: path.rs
unsegen_pager/: Cargo.toml
unsegen_signals/: Cargo.toml  README.md
unsegen_signals/src/: lib.rs
unsegen_terminal/: Cargo.toml  README.md
unsegen_terminal/src/: index.rs
unsegen_terminal/src/pty/: mod.rs
