[package]
name = "unsegen"
version = "0.3.0"
authors = ["ftilde <ftilde@tamepointer.de>"]

description = "Another tui library"
documentation = "https://docs.rs/unsegen"
repository = "https://github.com/ftilde/unsegen"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "tui"]

[dependencies]
ndarray = "0.8"
nix = "0.24"
raw_tty = "0.1"
smallvec = "1.8"
termion = "1.5"
unicode-segmentation = "1.0"
unicode-width = "0.1"
ropey = "1.3"

[dev-dependencies]
rand = "0.4"
